Modificaciones en el codigo

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,12 +1,19 @@
 .header__container {
-    margin: auto;
-    background: #000;
+    width: 100%;
     height: 60px;
+    background: #000;
     color: #fff;
     font-family: 'Poppins', sans-serif;
+    align-self: flex-start;
+}
+
+.header__title {
+    font-size: 24px;
+    text-transform: uppercase;
 }
 
 .header__container-logo {
+    height: 100%;
     display: grid;
     grid-template-columns: repeat(2, 50%);
     grid-template-rows: 1fr;
@@ -21,7 +28,6 @@
 }
 
 .header__icon .bx {
-
     font-size: 30px;
 }
 
