--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,15 @@
+.App {
+    display: grid;
+    width: 100%;
+    height: 100vh;
+    grid-gap: 10px;
+}
+
 .main__container {
+    width: 100%;
     display: grid;
     grid-template-columns: 1fr 2fr;
     grid-gap: 10px;
-    min-height: calc(100% - 50px);
-    padding-bottom: 60px;
-    align-content: flex-start;
 }
 
 @media (max-width: 768px) {
