--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,11 +1,10 @@
 .footer__container {
     background-color: #04091e;
     padding: 10px 0;
-    position: fixed;
     width: 100%;
     height: 50px;
-    bottom: 0;
     color: #fff;
     text-align: center;
     font-size: 12px;
+    align-self: self-end;
 }
