--- a/src/components/Form/style.css
+++ b/src/components/Form/style.css
@@ -1,15 +1,14 @@
 .notes__form {
     display: grid;
-    grid-template-rows: repeat(1, 1fr);
     width: 90%;
     height: max-content;
     max-width: 400px;
-    margin: 0px 30px 1px;
     border-radius: 10px;
     padding: 20px;
     box-shadow: -1px -2px 8px 3px rgba(0, 0, 0, 0.2);
     text-align: center;
-    margin-top: 30px;
+    align-self: center;
+    justify-self: center;
 }
 
 .notes__title {
