--- a/src/components/note/style.css
+++ b/src/components/note/style.css
@@ -31,3 +31,12 @@
     background-color: rgba(0, 0, 0, 0.681);
     color: white;
 }
+
+.notes__save {
+    margin: 2px;
+}
+
+.notes__save-title {
+    font-size: 30px;
+    padding: 2px 25px;
+}
