--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,58 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,300&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-  /* box-sizing: content-box; */
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    /* box-sizing: content-box; */
 }
 
 html {
-  min-height: 100%;
-  /* max-width: 400px; */
-  /* margin: 0 auto; */
+    min-height: 100%;
+    /* max-width: 400px; */
+    /* margin: 0 auto; */
 }
 
 body {
-  display: block;
-  height: 100%;
+    display: block;
+    height: 100%;
+}
+
+.App {
+    display: grid;
+    width: 100%;
+    height: 100vh;
+    grid-gap: 10px;
+}
+
+.main__container {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-gap: 10px;
+}
+
+.footer__container {
+    background-color: #04091e;
+    padding: 10px 0;
+    width: 100%;
+    height: 50px;
+    color: #fff;
+    text-align: center;
+    font-size: 12px;
+    align-self: self-end;
+}
+
+@media (max-width: 768px) {
+    .main__container {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        justify-items: center;
+        padding-bottom: 80px;
+    }
 }
